--- a/airbyte-ci/connectors/live-tests/pyproject.toml
+++ b/airbyte-ci/connectors/live-tests/pyproject.toml
@@ -46,7 +46,7 @@ python-slugify = ">=8.0.4"
 
 
 [tool.poetry.group.dev.dependencies]
-ruff = "^0.3.0"
+ruff = "^0.6"
 mypy = "^1.8.0"
 types-cachetools = "^5.3.0.7"
 pandas-stubs = "^2.2.0.240218"
@@ -55,6 +55,8 @@ types-pyyaml = "^6.0.12.20240311"
 
 [tool.ruff.lint]
 select = ["I", "F"]
+target-version = "py310"
+line-length = 140
 
 [tool.ruff.lint.isort]
 known-first-party = ["connection-retriever"]
