--- a/airbyte-ci/connectors/metadata_service/lib/tests/fixtures/metadata_validate/invalid/metadata_progressive_rollout_no_rc_suffix.yaml
+++ b/airbyte-ci/connectors/metadata_service/lib/tests/fixtures/metadata_validate/invalid/metadata_progressive_rollout_no_rc_suffix.yaml
@@ -11,7 +11,8 @@ data:
   releaseStage: generally_available
   license: MIT
   releases:
-    isReleaseCandidate: true
+    rolloutConfiguration:
+      enableProgressiveRollout: true
     breakingChanges:
       2.0.0:
         upgradeDeadline: 2023-08-22
