--- a/airbyte-ci/connectors/metadata_service/lib/tests/fixtures/metadata_validate/valid/with_optional_field/with_releases/metadata_release_candidate_enable_progressive_rollout.yaml
+++ b/airbyte-ci/connectors/metadata_service/lib/tests/fixtures/metadata_validate/valid/with_optional_field/with_releases/metadata_release_candidate_enable_progressive_rollout.yaml
@@ -11,7 +11,8 @@ data:
   releaseStage: generally_available
   license: MIT
   releases:
-    isReleaseCandidate: true
+    rolloutConfiguration:
+      enableProgressiveRollout: true
     breakingChanges:
       2.0.0:
         upgradeDeadline: 2023-08-22
