--- a/airbyte-integrations/connectors/destination-iceberg-v2/build.gradle
+++ b/airbyte-integrations/connectors/destination-iceberg-v2/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation("io.github.oshai:kotlin-logging-jvm:7.0.0")
     implementation("org.apache.hadoop:hadoop-common:3.4.1")
     implementation("org.projectnessie.nessie:nessie-client:0.99.0")
+    implementation("org.apache.hadoop:hadoop-client-api:3.4.1")
     implementation("jakarta.inject:jakarta.inject-api:2.0.1")
     implementation("com.github.spotbugs:spotbugs-annotations:4.8.6")
     implementation("io.micronaut:micronaut-inject:4.6.1")
@@ -55,10 +56,10 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-api:${project.ext.junitVersion}")
     testImplementation("org.junit.jupiter:junit-jupiter-params:${project.ext.junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${project.ext.junitVersion}")
-    // temporary dependencies so that we can continue running the legacy test suite.
-    // eventually we should remove those tests + rely solely on the bulk CDK tests.
-    // integrationTestLegacyImplementation testFixtures(project(":airbyte-cdk:java:airbyte-cdk:airbyte-cdk-db-destinations"))
-    // integrationTestLegacyImplementation testFixtures("io.airbyte.cdk:airbyte-cdk-db-destinations:0.47.0")
+
+    integrationTestImplementation("org.apache.iceberg:iceberg-data:${project.ext.apacheIcebergVersion}")
+    integrationTestImplementation("com.squareup.okhttp3:okhttp:4.12.0")
+    integrationTestImplementation("org.projectnessie.nessie:nessie-minio-testcontainer:0.101.1")
 }
 
 test {
