--- a/.github/workflows/connectors_up_to_date.yml
+++ b/.github/workflows/connectors_up_to_date.yml
@@ -41,7 +41,7 @@ jobs:
         id: generate_matrix
         run: |
           matrix=$(jq -c -r '{include: [.[] | "--name=" + .] | to_entries | group_by(.key / 100 | floor) | map(map(.value) | {"connector_names": join(" ")})}' selected_connectors.json)
-          echo "::set-output name=generated_matrix::$matrix"
+          echo "generated_matrix=$matrix" >> $GITHUB_OUTPUT
 
   run_connectors_up_to_date:
     needs: generate_matrix
