--- a/.github/workflows/format-fix-command.yml
+++ b/.github/workflows/format-fix-command.yml
@@ -30,7 +30,7 @@ concurrency:
 jobs:
   format-fix:
     name: "Run airbyte-ci format fix all"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: Get job variables
         id: job-vars
