--- a/.github/workflows/bump-version-command.yml
+++ b/.github/workflows/bump-version-command.yml
@@ -41,7 +41,7 @@ concurrency:
 jobs:
   bump-version:
     name: "Bump version of connectors in this PR"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: Get job variables
         id: job-vars
