--- a/.github/workflows/connectors_up_to_date.yml
+++ b/.github/workflows/connectors_up_to_date.yml
@@ -15,7 +15,7 @@ on:
 jobs:
   generate_matrix:
     name: Generate matrix
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     outputs:
       generated_matrix: ${{ steps.generate_matrix.outputs.generated_matrix }}
     steps:
