--- a/.github/workflows/publish_connectors.yml
+++ b/.github/workflows/publish_connectors.yml
@@ -72,7 +72,7 @@ jobs:
 
   notify-failure-slack-channel:
     name: "Notify Slack Channel on Publish Failures"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     needs:
       - publish_connectors
     if: ${{ always() && contains(needs.*.result, 'failure') && github.ref == 'refs/heads/master' }}
@@ -101,7 +101,7 @@ jobs:
 
   notify-failure-pager-duty:
     name: "Notify PagerDuty on Publish Failures"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     needs:
       - publish_connectors
     if: ${{ always() && contains(needs.*.result, 'failure') && github.ref == 'refs/heads/master' }}
