feat(ci): use pre-commit instead of airbyte-ci format (#49806)

--- a/airbyte-ci/connectors/auto_merge/pyproject.toml
+++ b/airbyte-ci/connectors/auto_merge/pyproject.toml
@@ -20,6 +20,9 @@ ruff = "^0.4.3"
 pytest = "^8.2.0"
 pyinstrument = "^4.6.2"
 
+[tool.ruff]
+line-length = 140
+
 [tool.ruff.lint]
 select = [
     "I" # isort
