--- a/airbyte-ci/connectors/live-tests/pyproject.toml
+++ b/airbyte-ci/connectors/live-tests/pyproject.toml
@@ -53,10 +53,12 @@ pandas-stubs = "^2.2.0.240218"
 types-requests = "^2.31.0.20240311"
 types-pyyaml = "^6.0.12.20240311"
 
-[tool.ruff.lint]
-select = ["I", "F"]
+[tool.ruff]
 target-version = "py310"
 line-length = 140
+
+[tool.ruff.lint]
+select = ["I", "F"]
 
 [tool.ruff.lint.isort]
 known-first-party = ["connection-retriever"]
