--- a/airbyte-integrations/connectors/destination-iceberg-v2/metadata.yaml
+++ b/airbyte-integrations/connectors/destination-iceberg-v2/metadata.yaml
@@ -9,14 +9,14 @@ data:
     - suite: unitTests
     - suite: integrationTests
       testSecrets:
-        - fileName: s3_dest_v2_minimal_required_config.json
-          name: SECRET_DESTINATION-S3-V2-MINIMAL-REQUIRED-CONFIG
+        - name: SECRET_DESTINATION-ICEBERG_V2_S3_GLUE_CONFIG
+          fileName: glue.json
           secretStore:
-            alias: airbyte-connector-testing-secret-store
             type: GSM
+            alias: airbyte-connector-testing-secret-store
   connectorType: destination
   definitionId: 37a928c1-2d5c-431a-a97d-ae236bd1ea0c
-  dockerImageTag: 0.2.0
+  dockerImageTag: 0.2.1
   dockerRepository: airbyte/destination-iceberg-v2
   documentationUrl: https://docs.airbyte.com/integrations/destinations/s3
   githubIssueLabel: destination-iceberg-v2
