--- a/airbyte-integrations/connectors/destination-s3-data-lake/metadata.yaml
+++ b/airbyte-integrations/connectors/destination-s3-data-lake/metadata.yaml
@@ -18,11 +18,16 @@ data:
   definitionId: 716ca874-520b-4902-9f80-9fad66754b89
   dockerImageTag: 0.2.6
   dockerRepository: airbyte/destination-s3-data-lake
-  documentationUrl: https://docs.airbyte.com/integrations/destinations/s3
+  documentationUrl: https://docs.airbyte.com/integrations/destinations/s3-data-lake
   githubIssueLabel: destination-s3-data-lake
   icon: icon.svg
   license: ELv2
-  name: S3 Data Lake Destination (BETA)
+  name: S3 Data Lake
+  registryOverrides:
+    cloud:
+      enabled: true
+    oss:
+      enabled: true
   releaseStage: alpha
   supportLevel: community
   supportsRefreshes: true
